--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <!-- Seção Banner Promocional -->
+    <!-- Banner Promocional -->
     <section id="inicio" class="hero">
         <div class="hero-container">
             <div class="hero-content">
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <!-- Seção de Serviços -->
+    <!-- Serviços -->
     <section id="servicos" class="services">
         <div class="container">
             <div class="section-header">
@@ -110,7 +110,7 @@
         </div>
     </section>
 
-    <!-- Seção de Depoimentos -->
+    <!-- Depoimentos -->
     <section id="depoimentos" class="testimonials">
         <div class="container">
             <div class="section-header">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-info">
-                            <h4>Ana Silva</h4>
+                            <h4>Mayara</h4>
                             <span>CEO, TechStart</span>
                         </div>
                         <div class="rating">
@@ -176,7 +176,7 @@
         </div>
     </section>
 
-    <!-- Seção de Benefícios -->
+    <!-- Benefícios -->
     <section class="benefits">
         <div class="container">
             <div class="section-header">
@@ -215,7 +215,7 @@
         </div>
     </section>
 
-    <!-- Seção de Contato -->
+    <!-- Contato -->
     <section id="contato" class="contact">
         <div class="container">
             <div class="contact-content">
@@ -296,7 +296,7 @@
         </div>
     </section>
 
-    <!-- Rodapé -->
+    <!-- footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -316,9 +316,9 @@
                 <div class="footer-section">
                     <h4>Contato</h4>
                     <ul>
-                        <li>(11) 9999-9999</li>
+                        <li>(51) 9999-9999</li>
                         <li>contato@marketingpro.com.br</li>
-                        <li>São Paulo, SP</li>
+                        <li>Novo Hamburgo, RS</li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -332,7 +332,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MarketingPro. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MarketingPro. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
